test_scores/negative_dimers/features/P17480.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P17480.pkl.xz